--- a/style.css
+++ b/style.css
@@ -17,6 +17,40 @@
 
 body {
     padding: 1.75rem 1rem;
+    background-color: var(--almost-white);
+}
+
+body.menu-open::before {
+    content: "";
+    position: absoluto;
+    height: 100vh;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    top: 0;
+    left: 0;
+    z-index: 999;
+
+    display: flex;
+    flex-direction: column;
+
+    padding: 1.5rem;
+
+    gap: 1.5rem;
+    display: none;
+}
+
+
+.header-mobile nav button{
+    align-self: flex-end;
+    margin-bottom: 4rem;
+}
+
+.header-mobile nav a{
+    text-decoration: none;
+    color: var(--dark-blue);
+    font-size: 1.5rem;
+    line-height: 1.5rem;
+
 }
 
 .header-mobile {
@@ -29,6 +63,16 @@ body {
 .header-mobile button{
     border: none;
     background: none;
+    width: fit-content;
+}
+
+.header-mobile nav {
+    position: fixed;
+    background-color:  var(--almost-white);
+    right: 0;
+    top: 0;
+    height: 100vh;
+    width: 16rem;
 }
 
 .primeira-secao {
